<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ids.androidsong.ui.CancionLista">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/cancion_lista" />

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_fullscreen" />

    <ImageButton
        android:id="@+id/cancion_detalle_opciones"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/colorPrimary"
        android:cropToPadding="false"
        android:onClick="mostrarOpciones"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="76dp"
        app:srcCompat="@drawable/ic_action_collapse" />

    <ImageButton
        android:id="@+id/cancion_detalle_flat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="false"
        android:backgroundTint="@android:color/holo_purple"
        android:cropToPadding="false"
        android:onClick="modificarAcordesBemol"
        android:scaleType="fitXY"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="116dp"
        app:srcCompat="@drawable/ic_action_flat" />

    <ImageButton
        android:id="@+id/cancion_detalle_sharp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/holo_purple"
        android:cropToPadding="false"
        android:onClick="modificarAcordesSostenido"
        android:scaleType="fitXY"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="156dp"
        app:srcCompat="@drawable/ic_action_sharp" />

    <ImageButton
        android:id="@+id/cancion_detalle_menor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/holo_purple"
        android:cropToPadding="false"
        android:onClick="tamanioLetraMenor"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="196dp"
        app:srcCompat="@drawable/ic_action_expand" />

    <ImageButton
        android:id="@+id/cancion_detalle_mayor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/holo_purple"
        android:cropToPadding="false"
        android:onClick="tamanioLetraMayor"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="236dp"
        app:srcCompat="@drawable/ic_action_collapse" />

    <ImageButton
        android:id="@+id/cancion_detalle_editar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="276dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/holo_purple"
        android:cropToPadding="true"
        android:onClick="mostrarEdicion"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageButton
        android:id="@+id/cancion_detalle_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="316dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/holo_purple"
        android:cropToPadding="false"
        android:onClick="mostrarAtributos"
        android:scaleType="centerCrop"
        app:srcCompat="@android:drawable/ic_dialog_info" />

</android.support.design.widget.CoordinatorLayout>
