...
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/papelera_lista_item_restaurar"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:adjustViewBounds="false"
        android:background="@android:drawable/screen_background_light_transparent"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/papelera_lista_item_borrar"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="false"
        android:background="@android:drawable/screen_background_light_transparent"
        android:cropToPadding="false"
...
